--- a/style.css
+++ b/style.css
@@ -93,16 +93,13 @@ a {
     padding: 5px 8px 5px 8px;
     font-size: 20px;
 }
-/* style cards */
-.cards {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
-    max-width: 1200px;
-    margin: auto;
-}
 
-.cards .cards-item {
+/* style cards */
+/* .cards {
+    gap: 10px;
+} */
+
+.cards-item {
 
     background-color: white;
     border: 1px solid rgb(191, 204, 211);
@@ -110,31 +107,32 @@ a {
 
 }
 
-.cards .cards-item .img {
+.cards-item .img {
     width: 100%;
     height: 300px;
     border-top-right-radius: 30px;
     border-top-left-radius: 30px;
 }
 
-.cards .cards-item .text-card {
+.cards-item .text-card {
     margin: 2px 30px 30px;
     text-align: justify;
 }
 
-.cards .cards-item .text-card .flex-item {
+.cards-item .text-card .flex-item {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.cards .cards-item .text-card .button-card {
+.cards-item .text-card .button-card {
     background: rgb(25, 135, 84);
     border-radius: 20px;
     padding: 5px;
     border: medium;
     color: white;
 }
+
 /* respansiv section */
 
 @media (max-width:576px) {
@@ -194,8 +192,9 @@ a {
         border: 2px solid rgb(246, 246, 246);
         padding: 5px 8px 5px 8px;
         font-size: 15px;
-    } 
-     /* .cards {
+    }
+
+    /* .cards {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 30px;
